GItLab Pages integrations
- Added a gitlab pages build job to the CI script.
- Added an `index.html` file to the project root. Due to the nature of the generated docs, the index file is required to redirect to the actual docs `index.html` file, which resides in a subdirectory.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,3 +42,16 @@ deploy:cargo:
   artifacts:
     paths:
     - public
+
+# Generate pages from docs
+pages:
+  script:
+  - mkdir .public
+  - cp -a target/doc/. .public
+  - cp index.html .public/
+  - mv .public public
+  artifacts:
+    paths:
+    - public
+  only:
+  - master
