[Fix] Pages generation script
- Added the actual doc generation command to the runner.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,6 +46,7 @@ deploy:cargo:
 # Generate pages from docs
 pages:
   script:
+  - cargo doc
   - mkdir .public
   - cp -a target/doc/. .public
   - cp index.html .public/
